# theoretical-campaign-science

./: .gitignore  README.md
http_server/: main.py  start.sh  start_debug.sh  start_release.sh  users.py
http_server/shop/: __init__.py  blog.py  config.json  demo.py
http_server/shop/static/blog/: utils.js
http_server/shop/templates/blog/: content.html  main.html
http_server/shop/templates/demo/: db_test.html  main.html
http_server/templates/: hello_user.html
psi/: Cargo.toml  README.md
psi/src/: crypto.rs  db.rs  lib.rs  main.rs  network.rs  utils.rs
temp/: blog.html  utils.js
web/: start_debug.sh  start_redirector.sh  start_release.sh  start_release_https.sh
web/app/: __init__.py  admin.py  blog.py  config.json  database.py  demo.py  init_db.sql  shop.py  users.py
web/app/posts/: post_1.txt  post_2.txt  post_3.txt  test.txt  test2.txt
web/app/static/blog/: utils.js
web/app/static/shop/: utils.js
web/app/templates/admin/: login.html  panel.html
web/app/templates/blog/: content.html  list.html  main.html  post.html
web/app/templates/shop/: main.html  offer.html
web/redirector/: __init__.py
