[package]
name = "tbop-tcs-psi"
version = "0.1.0"
edition = "2021"
description = "TBOP project"
license = "MIT"

[[bin]]
name = "client"

[[bin]]
name = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = { version = "0.4.0" }
ark-poly = {  version = "0.4.2" }
ark-std = { version = "0.4.0" }
ark-ff = "0.4.2"
rand = "0.8.5"
digest = "0.10.7"
sha256 = "1.5.0"
ark-serialize = "0.4.2"
clap = { version = "4.5.6", features = ["derive"] }
